--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -47,7 +47,7 @@
 }
 
 .parallax-image-01{
-  height: 40vh;
+  height: 40%;
   width: 100%;
   background-image: url("../img/parallax-img-01.jpg");
   background-size: cover;
